<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:checkable="false"
            android:enabled="false" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balans"
            android:checked="false"
            android:icon="@mipmap/ic_payment_white_24dp"
            android:iconTintMode="src_in"
            android:title="@string/balance" />
        <item
            android:id="@+id/nav_take_a_picture"
            android:icon="@mipmap/ic_photo_camera_white_24dp"
            android:title="@string/make_photo" />
        <item
            android:id="@+id/nav_my_pictures"
            android:icon="@drawable/ic_image_aspect_ratio_white_24dp"
            android:title="@string/invoices" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@mipmap/ic_account_box_white_24dp"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@mipmap/ic_import_contacts_white_24dp"
            android:title="@string/profile" />
    </group>

    <!--item
        android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item-->
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />

</menu>
