<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".LoginActivity">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:focusable="false"
                android:src="@drawable/fislas_logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mail_txt_box"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:drawableLeft="@mipmap/ic_mail_black_24dp"
                    android:hint="@string/email"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass_txt_box"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:drawableLeft="@mipmap/ic_https_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textNoSuggestions"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass_repeat_txt_box"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:drawableLeft="@mipmap/ic_https_black_24dp"
                    android:hint="@string/repeat_password"
                    android:inputType="textNoSuggestions"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/full_name"
                    android:inputType="textNoSuggestions"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/phone"
                    android:inputType="number|phone"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/company_name"
                    android:inputType="text|textNoSuggestions"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_company_phone"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/company_phone"
                    android:inputType="phone"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_company_email"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/company_mail"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_company_address"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/company_address"
                    android:inputType="text|textNoSuggestions"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_nip"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/nip"
                    android:inputType="number|numberDecimal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_regon"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/regon"
                    android:inputType="number|numberDecimal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tb_registration_taxservice"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/tax_service"
                    android:inputType="text|textNoSuggestions|number|numberDecimal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_items_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:hint="@string/tax_form"
                android:textSize="18sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorPrimary"
                fancy:fb_focusColor="@color/colorPrimaryDark"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/register"
                fancy:fb_textColor="#FFFFFF">

            </mehdi.sakout.fancybuttons.FancyButton>

            <TextView
                android:id="@+id/txt_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/have_an_account"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/txt_calltous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/call_us"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
